--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<p class="lead mb-5"
 						>Results-focused Javascript/ToonBoom professional with
 						strength in Animation and a variety of code based
-						software. Proactive leader with strengths in communication
+						software! Proactive leader with strengths in communication
 						and collaboration. Proficient in leveraging Direction and
 						creative knowledge to promote interest from customers.
 						Adept at managing concurrent objectives to promote
