--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					>
 					<li class="nav-item"
 						><a class="nav-link js-scroll-trigger" href="#awards"
-							>Awards</a
+							>Featured Projects!!</a
 						></li
 					>
 				</ul>
@@ -426,23 +426,31 @@
 			<!-- Awards-->
 			<section class="resume-section" id="awards">
 				<div class="resume-section-content">
-					<h2 class="mb-5">Awards & Certifications</h2>
+					<h2 class="mb-5">Featured Projects!</h2>
 					<ul class="fa-ul mb-0">
 						<li>
 							<span class="fa-li"
 								><i class="fas fa-trophy text-warning"></i
 							></span>
-							Osha 10 hour certified
+							<a href="https://joshhallrva.github.io/Weather-app/">Weather App!</a>
+
 						</li>
 						<li>
 							<span class="fa-li"
 								><i class="fas fa-trophy text-warning"></i
 							></span>
-							Toon Boom Animation associate
+							<a href="https://joshhallrva.github.io/Spirited-Scenery/">UR Group Project #1</a>
+                        </li>
+                        <li>
+							<span class="fa-li"
+								><i class="fas fa-trophy text-warning"></i
+							></span>
+							<a href="https://hallhammer.github.io/Code-Quiz-/.">CodeQuiz App!</a>
 						</li>
 					</ul>
 				</div>
-			</section>
+            </section>
+            
 		</div>
 		<!-- Bootstrap core JS-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
