--- a/index.html
+++ b/index.html
@@ -432,20 +432,23 @@
 							<span class="fa-li"
 								><i class="fas fa-trophy text-warning"></i
 							></span>
-							<a href="https://joshhallrva.github.io/Weather-app/">Weather App!</a>
+                            <a href="https://joshhallrva.github.io/Weather-app/">Weather App!</a>
+                            <a href="https://github.com/JoshHallRVA/Weather-app">Weather App github!</a>
 
 						</li>
 						<li>
 							<span class="fa-li"
 								><i class="fas fa-trophy text-warning"></i
 							></span>
-							<a href="https://joshhallrva.github.io/Spirited-Scenery/">UR Group Project #1</a>
+                            <a href="https://joshhallrva.github.io/Spirited-Scenery/">UR Group Project #1</a>
+                            <a href="https://github.com/JoshHallRVA/Spirited-Scenery">Github repository</a>
                         </li>
                         <li>
 							<span class="fa-li"
 								><i class="fas fa-trophy text-warning"></i
 							></span>
-							<a href="https://hallhammer.github.io/Code-Quiz-/.">CodeQuiz App!</a>
+                            <a href="https://hallhammer.github.io/Code-Quiz-/.">CodeQuiz App!</a>
+                            <a href="https://github.com/JoshHallRVA/Code-Quiz-">Link to github</a>
 						</li>
 					</ul>
 				</div>
