additions to profile

--- a/index.html
+++ b/index.html
@@ -440,15 +440,23 @@
 							<span class="fa-li"
 								><i class="fas fa-trophy text-warning"></i
 							></span>
-                            <a href="https://joshhallrva.github.io/Spirited-Scenery/">UR Group Project #1</a>
+                            <a href="https://hallhammer.github.io/Password-Generator/">Password Generator!</a>
                             <a href="https://github.com/JoshHallRVA/Spirited-Scenery">Github repository</a>
+						</li>
+						<li>
+							<span class="fa-li"
+								><i class="fas fa-trophy text-warning"></i
+							></span>
+                            <a href="https://joshhallrva.github.io/Spirited-Scenery/">UR Group Project #1</a>
+                            <a href="https://github.com/JoshHallRVA/Password-Generator">Github repository</a>
                         </li>
                         <li>
 							<span class="fa-li"
 								><i class="fas fa-trophy text-warning"></i
 							></span>
                             <a href="https://hallhammer.github.io/Code-Quiz-/.">CodeQuiz App!</a>
-                            <a href="https://github.com/JoshHallRVA/Code-Quiz-">Link to github</a>
+							<a href="https://github.com/JoshHallRVA/Code-Quiz-">Link to github</a>
+							<a href="https://grpprjct2.herokuapp.com/">Deployed Project 2!</a>
 						</li>
 					</ul>
 				</div>
