--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 							<span class="fa-li"
 								><i class="fas fa-trophy text-warning"></i
 							></span>
-                            <a href="https://joshhallrva.github.io/Weather-app/">Weather App!</a>
+                            <a href="https://joshhallrva.github.io/Weather-app/">Weather App!!</a>
                             <a href="https://github.com/JoshHallRVA/Weather-app">Weather App github!</a>
 
 						</li>
@@ -441,14 +441,14 @@
 								><i class="fas fa-trophy text-warning"></i
 							></span>
                             <a href="https://hallhammer.github.io/Password-Generator/">Password Generator!</a>
-                            <a href="https://github.com/JoshHallRVA/Spirited-Scenery">Github repository</a>
+                            <a href="https://github.com/JoshHallRVA/Spirited-Scenery">Github repository!</a>
 						</li>
 						<li>
 							<span class="fa-li"
 								><i class="fas fa-trophy text-warning"></i
 							></span>
                             <a href="https://joshhallrva.github.io/Spirited-Scenery/">UR Group Project #1</a>
-                            <a href="https://github.com/JoshHallRVA/Password-Generator">Github repository</a>
+                            <a href="https://github.com/JoshHallRVA/Password-Generator">Github repository!</a>
                         </li>
                         <li>
 							<span class="fa-li"
